appId: com.toughra.ustadmobile
tags:
  - courseTest
env:
  TESTRESULTSDIR: "build/reports/maestro/002_005_course_title_is_mandatory/Screenshots"
onFlowStart:
  - startRecording: 002_005_course_title_is_mandatory
  - runScript:
      file: "common/startserver.js"
      env:
        TESTCONTROLLER_URL: ${TESTCONTROLLER_URL}
  - clearState: com.toughra.ustadmobile
onFlowComplete:
  - stopRecording
  - runScript:
      file: "common/stopserver.js"
      env:
        TESTCONTROLLER_URL: ${TESTCONTROLLER_URL}
---
- runFlow: "common/clear_state_and_get_started.yaml"
- runFlow: "common/select_site.yaml"
- runFlow:
    file: "common/admin_login.yaml"
- runFlow:
    file: "common/add_course.yaml"
    env:
      TESTCOURSENAME: " "
# assert to make sure the course is not saved because of blank course title
- assertVisible:
    id: "app_title"
    text: "Add a new course"
# add course name and save
- tapOn: "Name*"
- inputText: "TEST COURSE"
- tapOn: "SAVE"
- assertVisible:
    id: "app_title"
    text: " TEST COURSE"