appId: com.toughra.ustadmobile
tags:
  - courseBlocks
env:
  TESTRESULTSDIR: "build/reports/maestro/003_002_add_module_text_blocks_and_perform_indent_hide_delete_actions/Screenshots"
onFlowStart:
  - startRecording: 003_002_add_module_text_blocks_and_perform_indent_hide_delete_actions
  - runScript:
      file: "common/startserver.js"
      env:
        TESTCONTROLLER_URL: ${TESTCONTROLLER_URL}
  - clearState: com.toughra.ustadmobile
onFlowComplete:
  - stopRecording
  - runScript:
      file: "common/stopserver.js"
      env:
        TESTCONTROLLER_URL: ${TESTCONTROLLER_URL}
---
- runFlow: "common/clear_state_and_learning_space_existing_userflow.yaml"
- runFlow: "common/select_site.yaml"
#admin login
- runFlow:
    file: "common/admin_login.yaml"
- runFlow:
    file: "common/add_course.yaml"
    env:
     TESTCOURSENAME: "Test Course Block Test"
# edit the course to add blocks
- tapOn:
    id: "floating_action_button"
# verify module block title is mandatory
- scrollUntilVisible:
    element:
      text: "Add block"
    direction: DOWN
- tapOn: "Add block"
- tapOn: "Module"
- tapOn: "Title*"
- hideKeyboard
- tapOn: "Done"
#Assertion to make sure the page is not saved because title is blank
- assertNotVisible:
    text: "Add block"
- tapOn: "Title*"
- inputText: "SEMESTER 1"
- hideKeyboard
- tapOn:
     text: "Done"
#add text block and test its title
- scrollUntilVisible:
    element:
      text: "Add block"
    direction: DOWN
- tapOn: "Add block"
- tapOn: "Text"
- tapOn: "Title*"
- hideKeyboard
- tapOn: "Done"
#Assertion to make sure the page is not saved because title is blank
- assertNotVisible:
    text: "Add block"
- tapOn: "Title*"
- inputText: "PRIMARY COLOURS"
- tapOn: "Description"
- tapOn:
    id: "com.toughra.ustadmobile:id/editor"
- inputText: "RED,BLUE,GREEN"
- tapOn: "Done"
- assertVisible:
    id: "app_title"
    text: "Add text"
- tapOn: "Done"
# hide the block- module
- scrollUntilVisible:
    element:
      text: "More options"
      index: 0
    direction: DOWN
- tapOn:
    text: "More options"
    index: 0
- tapOn: "Hide"
- tapOn: "SAVE"
- assertNotVisible:
    text: "SEMESTER 1"
- takeScreenshot: "${TESTRESULTSDIR}/module_block_is_hidden"
- tapOn:
    id: "floating_action_button"
#  swipe down to  view  added  blocks
- scrollUntilVisible:
    element:
      text: "More options"
      index: 0
    direction: DOWN
# unhide the module
- tapOn:
    text: "More options"
    index: 0
- tapOn: "Unhide"
- tapOn: "SAVE"
- scrollUntilVisible:
    element:
      text: "SEMESTER 1"
    direction: DOWN
- assertVisible:
    text: "SEMESTER 1"
- takeScreenshot: "${TESTRESULTSDIR}/module_block_unhide"
- tapOn:
    id: "floating_action_button"
# indent the text block ----- 1
- scrollUntilVisible:
    element:
      text: "More options"
      index: 1
    direction: DOWN
- tapOn:
    text: "More options"
    index: 1
- tapOn: "Indent"
- tapOn: "SAVE"
- takeScreenshot: "${TESTRESULTSDIR}/text_block_indented"
# unindent text block ----- 1
- tapOn:
    id: "floating_action_button"
- scrollUntilVisible:
    element:
      text: "More options"
      index: 1
    direction: DOWN
- tapOn:
    text: "More options"
    index: 1
- tapOn: "Unindent"
- tapOn: "SAVE"
- takeScreenshot: "${TESTRESULTSDIR}/text_block_unindented"
# Delete text block --- 1
- tapOn:
    id: "floating_action_button"
- scrollUntilVisible:
    element:
      text: "More options"
      index: 1
    direction: DOWN
- tapOn:
    text: "More options"
    index: 1
- tapOn: "Delete"
- tapOn: "SAVE"
- assertNotVisible:
    text: "PRIMARY COLOURS"
- takeScreenshot: "${TESTRESULTSDIR}/text_block_deleted"
